add to manifest

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -1,6 +1,18 @@
 {
-  "manifest_version": 3,
   "name": "Transc-exten",
   "version": "1.0",
-  "description": "Extension for the world"
+  "description": "Extension for the world, Greetings",
+  "manifest_version": 2,
+  "incognito": "split",
+  "chrome_url_overrides":{
+    "newtab":"index.html"
+  },
+  "permissions": [
+    "activeTab"
+  ],
+
+  "background": {
+    "service_worker": "background.js"
+  },
+  "icons":{ "128":"icon.png"}
 }
