--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -2,17 +2,21 @@
   "name": "Transc-exten",
   "version": "1.0",
   "description": "Extension for the world, Greetings",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "incognito": "split",
-  "chrome_url_overrides":{
+  "chrome_url_overrides": {
     "newtab":"index.html"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "contextMenus",
+    "tabs",
+    "storage"
   ],
 
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "js/background.js"
   },
-  "icons":{ "128":"icon.png"}
+
+  "icons": { "128":"images/icon.png" }
 }
