--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -7,27 +7,22 @@
   "chrome_url_overrides": {
     "newtab":"html/index.html"
   },
-  "content_scripts": [
-    {
-       "matches": [ "<all_urls>" ],
-       "js": [ "js/content.js"]
-    }
-  ],
 
-  "permissions": [
-    "activeTab",
+  "options_page": "html/options.html",
+
+  "permissions": [ 
+    "storage", 
+    "activeTab", 
     "scripting",
     "contextMenus",
-    "tabs",
-    "storage",
-    "https://*/*"],
+    "tabs"],
 
   "background": {
     "service_worker": "js/background.js"
   },
 
   "action": {
-    "default_popup":"html/index.html",
+    "default_popup":"html/popup.html",
     "default_icon": {
       "16":"images/icon.png",
       "32":"images/icon.png",
